--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "ethers": "^5.4.4",
+    "mui": "^0.0.1",
     "react": "^16.12.0",
+    "react-awesome-button": "^6.5.1",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
   },
