--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.6.8",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "ethers": "^5.4.4",
+    "framer-motion": "^4.1.17",
     "mui": "^0.0.1",
     "react": "^16.12.0",
     "react-awesome-button": "^6.5.1",
     "react-dom": "^16.12.0",
     "react-input-autosize": "^3.0.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-starfield-animation": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
